--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     });
 
     // Typing Loop Animation
-    const text = "WELCOME TO THE FUTURE OF DESIGN AND INNOVATION ";
+    const text = "Welcome to the future of Designing ";
     const typingElement = document.getElementById("typing");
     let index = 0;
     let isDeleting = false;
