--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us | Significant Engineering Designing Company</title>
+
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
   <style>
     /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -11,8 +15,8 @@
     body {
       font-family: 'Poppins', 'Montserrat', 'Inter', sans-serif;
       background: url("assets/images/engineering-bg.jpg") no-repeat center center;
-      background-size: cover;       /* Makes background responsive */
-      background-attachment: fixed; /* Keeps it nice on desktop */
+      background-size: cover;
+      background-attachment: fixed;
       color: #F5F5F5;
       line-height: 1.6;
       position: relative;
@@ -52,9 +56,7 @@
     .hamburger div { width: 25px; height: 3px; background: #F5F5F5; transition: 0.3s; }
 
     @media (max-width: 768px) {
-      body {
-        background-attachment: scroll; /* prevents issues on mobile */
-      }
+      body { background-attachment: scroll; }
       nav ul {
         display: none; flex-direction: column;
         position: absolute; top: 60px; right: 0;
@@ -106,17 +108,11 @@
     .social-icons { display: flex; gap: 1rem; flex-wrap: wrap; margin-top: 1rem; }
     .social-icons a {
       width: 42px; height: 42px; display: flex; justify-content: center; align-items: center;
-      border-radius: 50%; background: #1A2E25;
-      transition: transform 0.3s, background 0.3s;
+      border-radius: 50%; background: #fff; color: #000;
+      font-size: 20px;
+      transition: all 0.3s ease;
     }
-    .social-icons a img { width: 22px; height: 22px; }
-
-    /* Brand Colors on Hover */
-    .social-icons a.facebook:hover { background: #1877F2; }
-    .social-icons a.instagram:hover { 
-      background: radial-gradient(circle at 30% 30%, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
-    }
-    .social-icons a.whatsapp:hover { background: #25D366; }
+    .social-icons a:hover { background: #000; color: #fff; }
 
     /* Footer */
     footer {
@@ -175,15 +171,10 @@
         <p><strong>Email:</strong> info@significantengineering.com</p>
         <h3>Follow Us</h3>
         <div class="social-icons">
-          <a href="https://facebook.com/profile.php?id=61579199656924" target="_blank" class="facebook">
-            <img src="assets/images/facebook.png" alt="Facebook">
-          </a>
-          <a href="https://instagram.com/significant_engineering_design" target="_blank" class="instagram">
-            <img src="assets/images/instagram.png" alt="Instagram">
-          </a>
-          <a href="https://wa.me/2348123456789" target="_blank" class="whatsapp">
-            <img src="assets/images/whatsapp.png" alt="WhatsApp">
-          </a>
+          <a href="https://facebook.com/profile.php?id=61579199656924" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com" target="_blank"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://instagram.com/significant_engineering_design" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://wa.me/2348123456789" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
     </div>
