--- a/index.html
+++ b/index.html
@@ -330,26 +330,29 @@
   <!-- ===== Footer ===== -->
   <footer>
     <p>&copy; 2025 Significant Engineering Designing Company. All rights reserved.</p>
-    <div style="display:flex; justify-content:center; gap:20px;">
+    <div style="display:flex; justify-content:center; gap:16px;">
+      <!-- Facebook -->
       <a href="https://facebook.com/profile.php?id=61579199656924" target="_blank" 
-         style="display:inline-flex; align-items:center; justify-content:center; width:50px; height:50px; border-radius:50%; background:#fff; color:#000; font-size:24px; text-decoration:none;"
+         style="display:inline-flex; align-items:center; justify-content:center; width:42px; height:42px; border-radius:50%; background:#fff; color:#000; font-size:20px; text-decoration:none;"
          onmouseover="this.style.background='#000'; this.style.color='#fff';" 
          onmouseout="this.style.background='#fff'; this.style.color='#000';">
         <i class="fab fa-facebook-f"></i>
       </a>
 
-      <a href="https://twitter.com" target="_blank" 
-         style="display:inline-flex; align-items:center; justify-content:center; width:50px; height:50px; border-radius:50%; background:#fff; color:#000; font-size:24px; text-decoration:none;"
-         onmouseover="this.style.background='#000'; this.style.color='#fff';" 
-         onmouseout="this.style.background='#fff'; this.style.color='#000';">
-        <i class="fab fa-x-twitter"></i>
-      </a>
-
+      <!-- Instagram -->
       <a href="https://instagram.com/significant_engineering_design?igsh=MXBobWtwbmk2N2w4dw%3D%3D&utm_source=qr" target="_blank" 
-         style="display:inline-flex; align-items:center; justify-content:center; width:50px; height:50px; border-radius:50%; background:#fff; color:#000; font-size:24px; text-decoration:none;"
+         style="display:inline-flex; align-items:center; justify-content:center; width:42px; height:42px; border-radius:50%; background:#fff; color:#000; font-size:20px; text-decoration:none;"
          onmouseover="this.style.background='#000'; this.style.color='#fff';" 
          onmouseout="this.style.background='#fff'; this.style.color='#000';">
         <i class="fab fa-instagram"></i>
+      </a>
+
+      <!-- WhatsApp -->
+      <a href="https://wa.me/2349071842304" target="_blank" 
+         style="display:inline-flex; align-items:center; justify-content:center; width:42px; height:42px; border-radius:50%; background:#fff; color:#000; font-size:20px; text-decoration:none;"
+         onmouseover="this.style.background='#000'; this.style.color='#fff';" 
+         onmouseout="this.style.background='#fff'; this.style.color='#000';">
+        <i class="fab fa-whatsapp"></i>
       </a>
     </div>
   </footer>
@@ -393,5 +396,6 @@
     }
     type();
   </script>
+
 </body>
 </html>
