--- a/index.html
+++ b/index.html
@@ -23,10 +23,26 @@
 
     body{
       font-family: 'Poppins','Montserrat','Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background: url("assets/images/engineering-bg.jpg") no-repeat center center fixed;
+      /* fallback gradient + neon bg */
+      background: linear-gradient(135deg, #0D1117, #1a1f29);
+      background-image: linear-gradient(135deg, #0D1117, #1a1f29),
+                        url("assets/images/engineering-bg.jpg");
+      background-repeat: no-repeat;
+      background-position: center center;
       background-size: cover;
+      background-attachment: fixed;
       color: var(--text);
       line-height: 1.6;
+      position: relative;
+    }
+
+    /* overlay for readability */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(13,17,23,0.6);
+      z-index: -1;
     }
 
     a{ color: inherit; text-decoration: none; }
@@ -248,154 +264,3 @@
   </style>
 </head>
 <body>
-
-  <!-- ===== Header ===== -->
-  <header>
-    <div class="logo">
-      <img src="assets/images/logo.png" alt="Company Logo">
-      <span class="name"><strong>Significant Engineering Designing Company</strong></span>
-    </div>
-
-    <!-- Hamburger button -->
-    <div class="menu-toggle" id="menuToggle">
-      <span></span><span></span><span></span>
-    </div>
-
-    <nav id="navMenu" aria-label="Primary">
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- ===== Hero ===== -->
-  <section class="hero">
-    <h1>Significant Engineering Designing Company</h1>
-    <p class="welcome" id="typing"></p>
-    <h2>If you can think it, We can do it</h2>
-    <a class="cta" href="contact.html">Lets Work Together</a>
-  </section>
-
-  <!-- ===== About ===== -->
-  <section id="about" class="about">
-    <h2 class="section-title">About Us</h2>
-    <p> At <strong>Significant Engineering Designing Company</strong>, we turn ideas into reality through innovation, precision, and creativity. We specialize in advanced design solutions that bring new concepts to life while delivering customized business products that stand out in today’s highly competitive market. </p>
-    <p> Our mission is simple yet powerful: to provide easy, simplified, and practical designs that not only meet your requirements but also empower businesses to grow locally and thrive internationally. </p>
-    <p> With a strong focus on excellence, we believe that every idea no matter how big or small holds potential. </p>
-    <div class="motto-box">
-      <p class="motto-title">Our Guiding Motto: IF YOU CAN THINK IT, WE CAN DO IT.</p>
-    </div>
-    <p> At Significant Engineering Designing Company, we don’t just design; we create opportunities, unlock possibilities, and build solutions that inspire the future. </p>
-  </section>
-
-  <!-- ===== Services ===== -->
-  <section class="services">
-    <h2 class="section-title">Our Services</h2>
-    <p class="section-sub"> At Significant Engineering Designing Company, we believe engineering is more than building machines, it’s about designing smarter solutions, shaping ideas into reality, and pushing the boundaries of innovation.
-
-  Our services are designed to deliver innovative, reliable, and future-ready engineering solutions that meet the needs of every client.</p>
-
-    <div class="service-grid">
-      <div class="service"><img src="assets/images/machine-design.png" alt="Machine Designs Icon"><h3>Machine Designs</h3></div>
-      <div class="service"><img src="assets/images/simulation.png" alt="Machine Simulation Icon"><h3>Machine Simulation</h3></div>
-      <div class="service"><img src="assets/images/sculpture.png" alt="Sculpture Designs Icon"><h3>Sculpture Designs</h3></div>
-      <div class="service"><img src="assets/images/plastic-casting.png" alt="Plastic Casting Icon"><h3>Plastic Casting (Fiber)</h3></div>
-      <div class="service"><img src="assets/images/welding.png" alt="Welding and Fabrication Icon"><h3>Welding &amp; Fabrication</h3></div>
-      <div class="service"><img src="assets/images/laser.png" alt="Laser Jewelry Cutting Icon"><h3>Laser Jewelry Cutting</h3></div>
-      <div class="service"><img src="assets/images/ai.png" alt="AI Programming Icon"><h3>AI Programming (Smart Design)</h3></div>
-      <div class="service"><img src="assets/images/machining.png" alt="Machining Jobs Icon"><h3>Machining Jobs</h3></div>
-      <div class="service"><img src="assets/images/3d-printing.png" alt="3D Printing Icon"><h3>3D Printing</h3></div>
-      <div class="service"><img src="assets/images/3d-scan.png" alt="3D Scanning Icon"><h3>3D Scanning</h3></div>
-    </div>
-  </section>
-
-  <!-- ===== Portfolio ===== -->
-  <section class="portfolio">
-    <h2 class="section-title">Our Works</h2>
-    <p class="section-sub">A peek at some of the builds, prototypes, and finished products we’ve delivered.</p>
-
-    <div class="portfolio-grid">
-      <div class="portfolio-item"><img src="assets/images/work1.jpg" alt="Work 1"></div>
-      <div class="portfolio-item"><img src="assets/images/work2.jpg" alt="Work 2"></div>
-      <div class="portfolio-item"><img src="assets/images/work3.jpg" alt="Work 3"></div>
-      <div class="portfolio-item"><img src="assets/images/work4.jpg" alt="Work 4"></div>
-      <div class="portfolio-item"><img src="assets/images/work5.jpg" alt="Work 5"></div>
-      <div class="portfolio-item"><img src="assets/images/work6.jpg" alt="Work 6"></div>
-      <div class="portfolio-item"><img src="assets/images/work7.jpg" alt="Work 7"></div>
-      <div class="portfolio-item"><img src="assets/images/work8.jpg" alt="Work 8"></div>
-    </div>
-  </section>
-
-  <!-- ===== Footer ===== -->
-  <footer>
-    <p>&copy; 2025 Significant Engineering Designing Company. All rights reserved.</p>
-    <div style="display:flex; justify-content:center; gap:16px;">
-      <!-- Facebook -->
-      <a href="https://facebook.com/profile.php?id=61579199656924" target="_blank" 
-         style="display:inline-flex; align-items:center; justify-content:center; width:42px; height:42px; border-radius:50%; background:#fff; color:#000; font-size:20px; text-decoration:none;"
-         onmouseover="this.style.background='#000'; this.style.color='#fff';" 
-         onmouseout="this.style.background='#fff'; this.style.color='#000';">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-
-      <!-- Instagram -->
-      <a href="https://instagram.com/significant_engineering_design?igsh=MXBobWtwbmk2N2w4dw%3D%3D&utm_source=qr" target="_blank" 
-         style="display:inline-flex; align-items:center; justify-content:center; width:42px; height:42px; border-radius:50%; background:#fff; color:#000; font-size:20px; text-decoration:none;"
-         onmouseover="this.style.background='#000'; this.style.color='#fff';" 
-         onmouseout="this.style.background='#fff'; this.style.color='#000';">
-        <i class="fab fa-instagram"></i>
-      </a>
-
-      <!-- WhatsApp -->
-      <a href="https://wa.me/2349071842304" target="_blank" 
-         style="display:inline-flex; align-items:center; justify-content:center; width:42px; height:42px; border-radius:50%; background:#fff; color:#000; font-size:20px; text-decoration:none;"
-         onmouseover="this.style.background='#000'; this.style.color='#fff';" 
-         onmouseout="this.style.background='#fff'; this.style.color='#000';">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-    </div>
-  </footer>
-
-  <!-- ===== Scripts ===== -->
-  <script>
-    // Menu Toggle
-    const menuToggle = document.getElementById('menuToggle');
-    const navMenu = document.getElementById('navMenu');
-    menuToggle.addEventListener('click', () => {
-      menuToggle.classList.toggle('active');
-      navMenu.classList.toggle('open');
-    });
-
-    // Typing Loop Animation
-    const text = "Welcome To The Future Of Designing ";
-    const typingElement = document.getElementById("typing");
-    let index = 0;
-    let isDeleting = false;
-
-    function type() {
-      const speed = isDeleting ? 50 : 100;
-      typingElement.textContent = text.substring(0, index);
-
-      if (!isDeleting && index < text.length) {
-        index++;
-      } else if (isDeleting && index > 0) {
-        index--;
-      }
-      if (index === text.length) {
-        isDeleting = true;
-        setTimeout(type, 1500); // pause before deleting
-        return;
-      }
-
-      if (isDeleting && index === 0) {
-        isDeleting = false;
-      }
-
-      setTimeout(type, speed);
-    }
-    type();
-  </script>
-
-</body>
-</html>
